--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<html> 
+<body> 
+<py - repl> 
+import datetime 
+now = datetime.datetime.now()  
+print(now) 
+my_list = [1, 2, 3] 
+print(my_list) 
+</py - repl> 
+</body> 
+</html> 
